# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  09 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/cache/flat_list.py:
  Damn I'm cool- _eclasses_ are now properly returned.

  09 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py, pym/ebuild.py:
  Two issues- use parsed restrict handling, and depends phase not bailing when
  a cpv's key's can't be sourced

  09 Mar 2005; Marius Mauch <genone@gentoo.org> pym/elog_modules/mod_mail.py:
  Add a "To" header to mails.

  09 Mar 2005; Marius Mauch <genone@gentoo.org> bin/ebuild-daemon.sh:
  portageq shouldn't prefix its output as it's used in variables.

  08 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/ebuild.py: Revert part of 
  the restrict/portage_restrict changes so use conditionals in restrict work
  again.

  08 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py, pym/portage_dep.py,
  pym/portage_util.py, pym/config.py:  Moved match_from_list, match_to_* stuff
  into portage_dep, and updated references, and fixed a few bugs related to 
  match_* locations from last check in.
  Threw out match_from_list_original func- it's dead code.

  08 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py: Harring's law 
  in effect- stupid one line bugs do not rear their head till the delta hits the 
  repository... :/
  Fix for the INHERITED auto-determination in portdbapi.aux_get

  08 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py, bin/emerge, 
  cache/*, pym/eclass_cache.py :  Cache refactoring.  Eclass_cache is now just 
  a dict of stacked eclasses, but doesn't track per pkg eclasses.
  That is left up to the cache.  The cache now ignores/drops INHERITED- this 